--- a/index.html
+++ b/index.html
@@ -1,23 +1,45 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Zewotir D. Alemu - TV Host, Voice-Over Artist & Sketch Artist</title>
-    <meta name="description" content="Zewotir (Mr. Zik) D. Alemu - Professional TV Host, Voice-Over Talent, and Sketch Artist. Explore my media work, voice samples, and art portfolio." />
+
+    <meta
+      name="description"
+      content="Zewotir (Mr. Zik) D. Alemu - Professional TV Host, Voice-Over Talent, and Sketch Artist. Explore my media work, voice samples, and art portfolio."
+    />
     <meta name="author" content="Zewotir D. Alemu" />
+
+    <!-- ✅ Open Graph (for social preview like Telegram, Facebook, LinkedIn) -->
+    <meta property="og:title" content="Zewotir D. Alemu - Media Professional" />
+    <meta
+      property="og:description"
+      content="Professional TV Host, Voice-Over Talent, and Sketch Artist."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://zewotiralemu.netlify.app/" />
+    <meta property="og:image" content="/preview-image.jpg" />
+
+    <!-- ✅ Twitter Card (for Twitter/X preview) -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Zewotir D. Alemu - Media Professional"
+    />
+    <meta
+      name="twitter:description"
+      content="Professional TV Host, Voice-Over Talent, and Sketch Artist."
+    />
+    <meta name="twitter:image" content="/preview-image.jpg" />
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet" />
-
-    <meta property="og:title" content="Zewotir D. Alemu - Media Professional" />
-    <meta property="og:description" content="Professional TV Host, Voice-Over Talent, and Sketch Artist" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
