Updated project files for TV host portfolio

--- a/index.html
+++ b/index.html
@@ -3,41 +3,44 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Zewotir D. Alemu - TV Host, Voice-Over Artist & Sketch Artist</title>
+
+    <title>
+      Zewotir Desalegn Alemu | PR Strategist, TV Host & Media Personality
+    </title>
 
     <meta
       name="description"
-      content="Zewotir (Mr. Zik) D. Alemu - Professional TV Host, Voice-Over Talent, and Sketch Artist. Explore my media work, voice samples, and art portfolio."
+      content="Hire Zewotir Desalegn Alemu: a leading Media Personality, Professional TV Host, PR Strategist, and authoritative Voice-Over Artist. Crafting narratives that connect."
     />
-    <meta name="author" content="Zewotir D. Alemu" />
+    <meta name="author" content="Zewotir Desalegn Alemu" />
 
-    <!-- ✅ Open Graph (for social preview like Telegram, Facebook, LinkedIn) -->
-    <meta property="og:title" content="Zewotir D. Alemu - Media Professional" />
+    <meta
+      property="og:title"
+      content="Zewotir Desalegn Alemu - Media Professional & PR Strategist"
+    />
     <meta
       property="og:description"
-      content="Professional TV Host, Voice-Over Talent, and Sketch Artist."
+      content="Professional TV Host, PR Strategist, Voice-Over Talent, and Sketch Artist."
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://zewotiralemu.netlify.app/" />
     <meta property="og:image" content="/preview-image.jpg" />
 
-    <!-- ✅ Twitter Card (for Twitter/X preview) -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Zewotir D. Alemu - Media Professional"
+      content="Zewotir Desalegn Alemu - Media Professional & PR Strategist"
     />
     <meta
       name="twitter:description"
-      content="Professional TV Host, Voice-Over Talent, and Sketch Artist."
+      content="Professional TV Host, PR Strategist, Voice-Over Talent, and Sketch Artist."
     />
     <meta name="twitter:image" content="/preview-image.jpg" />
 
-    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap"
       rel="stylesheet"
     />
   </head>
